chore(feedback): implement week 2 lfa feedbacks
- use uuid to generate unique IDs for the users in the database
- use ID to specify a user in the user routes params instead of user email
- declare the port variable outside the app.listen callback
- change the invalid amount error status code to 422
- split the routes file and put the pieces in a routes folder
- merge similar validators into one and use that in the routes file
- create a middleware to ensure that the signup password has at least 6
  alphanumeric characters

[Starts #166128530]
